# ml_planes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile  tuned_constants_bak.txt
.claude/commands/: observe-state.md  tune.md
.claude/skills/observe-state/: SKILL.md
.claude/skills/train-evaluate-improve/: SKILL.md
.claude/skills/train-evaluate-optimize/: SKILL.md
.claude/skills/tune/: SKILL.md
assets/planes/: business_jet.plane.ron  business_jet.tuning.ron  cargo_jet.plane.ron  cargo_jet.tuning.ron  electric_trainer.plane.ron  electric_trainer.tuning.ron  generic_jet.plane.ron  generic_jet.tuning.ron  tanker.plane.ron  tanker.tuning.ron
assets/plans/: patrol.plan.ron
assets/scenarios/: default.scenario.ron  fleet_demo.scenario.ron  level_hold.scenario.ron  mixed_powerplant.scenario.ron  orbit.scenario.ron  stress_100.scenario.ron  wingman_formation.scenario.ron
assets/shaders/: ground_grid.wgsl
assets/training/: codex_orbit_stable.ppo.ron  default.ppo.ron  level_hold.reward.ron  orbit.reward.ron  wu_orbit.reward.ron
examples/: observe_state.rs
plans/: client_server.md  controller_context.md  mcp_server.md  roadmap.md  test_compile_speed.md  wasm_feasibility.md
src/: lib.rs  main.rs  notifications.rs  scenario.rs  sim_speed.rs
src/aerodynamics/: atmosphere.rs  mod.rs  model.rs
src/camera/: mod.rs  mode.rs  plugin.rs  systems.rs
src/controllers/: ascent.rs  component.rs  flight_plan.rs  guidance.rs  heading_hold.rs  kind.rs  l1.rs  level_hold.rs  manual.rs  mod.rs  model_load.rs  orbit.rs  orbit_marker.rs  pid.rs  rl_level_hold.rs  rl_lstm_orbit.rs  rl_orbit.rs  rl_orbit_residual.rs  selected_model.rs  sim_control.rs  telemetry.rs  traits.rs  tuning.rs  waypoint.rs  wingman.rs
src/environment/: grid_material.rs  ground.rs  lifecycle.rs  mod.rs  plugin.rs  scenario_spawn.rs  spawner.rs  visual.rs
src/mcp/: args.rs  bridge.rs  lifecycle.rs  mod.rs  service.rs  snapshot.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs
src/plane/: config.rs  context.rs  inputs.rs  mod.rs  plugin.rs  state.rs  systems.rs
src/training/: bc.rs  env.rs  eval.rs  eval_metrics.rs  flight_env.rs  level_hold_env.rs  mod.rs  orbit_env.rs  orbit_residual_env.rs  ppo_config.rs  reward_config.rs  vec_env.rs  wu_orbit_env.rs  wu_orbit_reward.rs
src/training/ppo/: buffer.rs  csv_log.rs  lstm_buffer.rs  lstm_model.rs  lstm_trainer.rs  mod.rs  model.rs  trainer.rs
src/ui/: file_load.rs  hud.rs  lifecycle_panel.rs  map.rs  menu.rs  mod.rs  notifications.rs  plugin.rs  time_control.rs
tests/: aero_physics.rs  client_net.rs  controller_telemetry.rs  flight_plan.rs  fuel.rs  heading_hold.rs  level_hold.rs  lifecycle.rs  local_server.rs  mcp_bridge.rs  mcp_e2e.rs  mcp_lifecycle.rs  mcp_snapshot.rs  net_protocol.rs  net_serde.rs  orbit_tune_sync.rs  pid_convergence.rs  ppo_training.rs  rl_inference.rs  scenario.rs  server_sim.rs  sim_control.rs  spawn_reset.rs  waypoint.rs  wingman.rs
tests/common/: mod.rs
tests/core/: aero_physics.rs  flight_plan.rs  fuel.rs  heading_hold.rs  level_hold.rs  lifecycle.rs  main.rs  plane_assets.rs  render_pose_order.rs  scenario.rs  sim_control.rs  spawn_reset.rs  wingman.rs
tests/net/: client_net.rs  local_server.rs  main.rs  mcp_bridge.rs  mcp_e2e.rs  mcp_lifecycle.rs  mcp_snapshot.rs  net_protocol.rs  net_serde.rs  server_sim.rs
tests/rl/: main.rs  ppo_training.rs  rl_inference.rs
