[package]
name = "ml_planes"
version = "0.1.0"
edition = "2021"

[features]
default = ["visual"]
visual = ["bevy/default", "bevy_egui", "rfd"]
wasm = ["visual", "inference"]
inference = ["burn/std", "burn/ndarray"]
training = ["inference", "burn/wgpu", "burn/autodiff", "burn/train", "burn/tui"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_asset"] }
bevy_rapier3d = { version = "0.33", default-features = false, features = ["dim3"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
bevy_egui = { version = "0.39", optional = true }
rfd = { version = "0.15", optional = true }
burn = { version = "0.20", optional = true, default-features = false }
naga = { version = "26", features = ["termcolor"] }

[[bin]]
name = "train_ppo"
path = "src/bin/train_ppo.rs"
required-features = ["training"]

[[bin]]
name = "train_bc"
path = "src/bin/train_bc.rs"
required-features = ["training"]

[[bin]]
name = "evaluate_policy"
path = "src/bin/evaluate_policy.rs"
required-features = ["inference"]
