[package]
name = "ml_planes"
version = "0.1.0"
edition = "2021"

[features]
default = ["visual"]
visual = ["bevy/default", "bevy_egui", "rfd"]
wasm = ["visual", "inference"]
# `bevy/bevy_log` gives the `warn!`/`info!` macros to the headless RL controller-load
# systems (in `controllers::sim_control`); it's already on via `bevy/default` in visual builds.
inference = ["burn/std", "burn/ndarray", "bevy/bevy_log"]
training = ["inference", "burn/wgpu", "burn/autodiff", "burn/train", "burn/tui"]
# Networking: replication + renet UDP transport. `bevy/serialize` gives Vec3/Quat/
# Transform serde impls used by the net protocol and the serde-derived sim types.
net = ["dep:bevy_replicon", "dep:bevy_replicon_renet", "bevy/serialize"]
# Headless authoritative sim. `bevy_asset` is already on the base bevy dep, so the
# server build only needs networking on top of the headless core.
server = ["net"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_asset"] }
bevy_rapier3d = { version = "0.33", default-features = false, features = ["dim3"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
bevy_egui = { version = "0.39", optional = true }
rfd = { version = "0.15", optional = true }
burn = { version = "0.20", optional = true, default-features = false }
naga = { version = "26", features = ["termcolor"] }
bevy_replicon = { version = "0.40", optional = true }
bevy_replicon_renet = { version = "0.16", optional = true }

[[bin]]
name = "train_ppo"
path = "src/bin/train_ppo.rs"
required-features = ["training"]

[[bin]]
name = "train_bc"
path = "src/bin/train_bc.rs"
required-features = ["training"]

[[bin]]
name = "evaluate_policy"
path = "src/bin/evaluate_policy.rs"
required-features = ["inference"]
